--- a/src/BcBundle/Resources/views/Stock/indexStock.html.twig
+++ b/src/BcBundle/Resources/views/Stock/indexStock.html.twig
@@ -5,7 +5,7 @@
         <br>
         <div class="row">
             <div class="col-md-6">
-                <h2><b><i class="fas fa-check"></i> Mi lista</b></h2>    
+                <h2><b><i class="fas fa-check"></i> Resultados . . .</b></h2>    
             </div>
         </div>
         <br>
