Preparado el JS para la confirmacion de administracion de datos. Usar en otros apartados.

--- a/src/BcBundle/Resources/views/Libro/indexNoValLibro.html.twig
+++ b/src/BcBundle/Resources/views/Libro/indexNoValLibro.html.twig
@@ -43,7 +43,7 @@
                                 <div class="container">
                                     <div class="row">
                                         <div class="col-md-6">
-                                            <a href=""><i class="fa fa-check" style="font-size: 250%"></i></a>
+                                            <a href="{{path("bc_validar",{"id":libro.id_libro})}}"><i class="fa fa-check" style="font-size: 250%"></i></a>     
                                         </div>
                                     </div>
                                 </div>
