--- a/src/BcBundle/Resources/views/Libro/editLibro.html.twig
+++ b/src/BcBundle/Resources/views/Libro/editLibro.html.twig
@@ -9,7 +9,7 @@
                 </div>
                 <div class="col-md-5">
                     <br>
-                    <h2>Añadir libro</h2>
+                    <h2>Editar libro</h2>
                     <br>
                     {{form_start(form, {'enctype':'multipart/form-data' })}}
                     {{form_end(form)}}
