--- a/src/BcBundle/Resources/views/Usuario/login.html.twig
+++ b/src/BcBundle/Resources/views/Usuario/login.html.twig
@@ -69,6 +69,7 @@
             <span id="menuContentprinc">
                 <div class="row">
                     <div class="col-md-3" align="center">
+                        <input type="button" value="Prueba JS" class="btn btn-danger" onclick="testEditar()">
                         <a href="{{path("bc_index_libro")}}">
                             <img src="{{asset("imgdata/smile.png")}}" height="50" width="50">
                             <input type="button" value="Listado de libros" class="btn btn-info">
@@ -104,9 +105,8 @@
     <div class="clearfix"></div>
 {% endblock %}
 {% block javascript %}
-    <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.1.1.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" crossorigin="anonymous"></script>
-    <script>
+    <script src="{{ asset('assets/js/function.js') }}" type="text/javascript"></script>
+    <script>       
         $(document).ready(function () {
             $("#add").toggle();
             $("#logSesion").toggle();
