--- a/src/BcBundle/Resources/views/Libro/addLibro.html.twig
+++ b/src/BcBundle/Resources/views/Libro/addLibro.html.twig
@@ -3,6 +3,19 @@
     <br>
     {% if app.user != null %}
         <br>
+        <div class="container bg-info">
+            <br>
+            <div class="row">
+                <div class="col-md-6">
+                    <a href="{{path("bc_index_libro")}}">
+                        <input type="button" value="Ver libros" class="btn btn-warning">
+                    </a>
+                </div>
+            </div>
+            <br>
+        </div>
+        <br>
+        <br>
         <div class="container bg-warning">
             <div class="row">
                 <div class="col-md-3">
