--- a/src/BcBundle/Resources/views/Usuario/editUsuario.html.twig
+++ b/src/BcBundle/Resources/views/Usuario/editUsuario.html.twig
@@ -7,8 +7,8 @@
             <br>
             <div class="row">
                 <div class="col-md-6">
-                    <a href="{{path("bc_index_libro")}}">
-                        <input type="button" value="Ver libros" class="btn btn-warning">
+                    <a href="{{path("bc_index_usuario")}}">
+                        <input type="button" value="Ver todos los usuarios" class="btn btn-warning">
                     </a>
                 </div>
             </div>
@@ -22,7 +22,7 @@
                 </div>
                 <div class="col-md-5">
                     <br>
-                    <h2>Editar libro</h2>
+                    <h2>Editar usuario</h2>
                     <br>
                     {{form_start(form, {'enctype':'multipart/form-data' })}}
                     {{form_end(form)}}
