--- a/src/BcBundle/Resources/views/Libreria/indexLibreria.html.twig
+++ b/src/BcBundle/Resources/views/Libreria/indexLibreria.html.twig
@@ -1,29 +1,67 @@
 {% extends "BcBundle::layout.html.twig" %}
 {% block content %}
-    <br>
-    <div class="container bg-info">
-        <br>
-        <div class="row">
-            {% if app.user.rol == 'ADMIN' %}
-                <div class="col-md-6">
-                    <a href="{{path("bc_add_libreria")}}"><input type="button" value="Inscribir librería" class="btn btn-warning"></a>
-                </div>
-            {% endif %}
-            <div class="col-md-6">
-                <a href=""><input type="button" value="Buscar" class="btn btn-warning"></a>
-            </div>
-        </div>
-        <br>
-    </div>
-    <br>
     {% if app.user != null %} 
         {% if app.user.rol != null %}
+            <br>
+            <div class="container bg-dark">
+                <br>
+                <div class="row">
+                    {% if app.user.rol == 'ADMIN' %}
+                        <div class="col-md-6">
+                            <a href="{{path("bc_add_libreria")}}"><input type="button" value="Inscribir librería" class="btn btn-warning"></a>
+                        </div>
+                    {% endif %}
+                    <div class="col-md-6">
+                        <input id="act_busq" type="button" value="¿Buscas algo?" class="btn btn-warning">
+                    </div>
+                </div>
+                <br>
+            </div>
+            <br>
+            <div id="busq_libreria" class="container bg-info">
+                <br>
+                <div id="controlBusqueda" class="row">
+                    <div class="col-md-6">
+                        <h3><b>Búsqueda de libreria</b></h3>
+                    </div>
+                    <div class="col-md-6">
+                        <table style="width: 75%">
+                            <form accept-charset="utf-8" method="POST">
+                                <tr>
+                                    <td><b>Seleccione el parámetro de búsqueda : </b><br>
+                                        <select name="ParamBusq">
+                                            <option value="nada"></option>
+                                            <option value="NIF">NIF</option>
+                                            <option value="nombre">Nombre</option>
+                                            <option value="poblacion">Población</option>
+                                            <option value="provincia">Provincia</option>
+                                            <option value="fecha">Fecha</option>
+                                        </select>
+                                    </td>
+                                </tr>             
+                                <tr>
+                                    <td ><b>Texto de clave : </b><br>
+                                        <input type="text" id="parametroBusqueda" value="" placeholder="" maxlength="30" autocomplete="off" />
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <br><input id="activarBusqueda" type="button" value="Buscar.." class="btn btn-dark"><input id="cancelarBusqueda" type="button" value="Cancelar" class="btn btn-danger">
+                                    </td>
+                                </tr>
+                            </form>
+                        </table>
+                    </div>
+                </div>
+                <br>
+            </div>
+            <br>
             {% for libreria in librerias %}
-                <div id="tupla_libreria" class="container bg-warning">
+                <div class="container bg-warning">
                     <br>
                     <div class="row">
                         <div class="col-md-12">
-                            <h2><i class="fas fa-arrow-alt-circle-right"></i>{{libreria.nombre}}</h2>
+                            <h2><i class="fas fa-arrow-alt-circle-right"></i><b><a href="{{path("bc_perfil_libreria",{"id":libreria.idLibreria})}}">{{libreria.nombre}}</b></a></h2>
                         </div>
                     </div>
                     <div class="row">
@@ -31,13 +69,13 @@
                             <h2>
                                 {% if app.user.rol == 'ADMIN' %} 
                                     <br><br>
+                                    <div class="col-md-2"></div>
                                     <div class="col-md-3">
-                                                <a href="{{path("bc_edit_libreria",{"id":libreria.idLibreria})}}"><i class="fas fa-pencil-alt" style="font-size: 250"></i></a>
-                                            </div>
-                                            <div class="col-md-3">
-                                                <a href="{{path("bc_delete_libreria",{"id":libreria.idLibreria})}}"><i class="fas fa-trash" style="font-size: 250"></i></a>
-                                            </div>
-    
+                                        <a href="{{path("bc_edit_libreria",{"id":libreria.idLibreria})}}"><i class="fas fa-pencil-alt" style="font-size: 250"></i></a>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <a href="{{path("bc_delete_libreria",{"id":libreria.idLibreria})}}"><i class="fas fa-trash" style="font-size: 250"></i></a>
+                                    </div>
                                 {% endif %} 
                             </h2>
                         </div>    
@@ -60,8 +98,8 @@
                                             {% if libreria.ubicacion == "" or libreria.ubicacion == null %}
                                                 <b> Web : </b> <a href="{{ libreria.web }}"><i class="fas fa-link"></i> {{libreria.nombre}}</a>
                                             {% else %}
-                                                <b> Ubicación :</b>  <a href="{{libreria.ubicacion}}"><i class="far fa-map"></i> Ubicación</a><br>
-                                                <b> Web : </b> <a href="{{ libreria.web }}"><i class="fas fa-link"></i> {{libreria.nombre}} </a>
+                                                <b> Ubicación :</b>  <a href="{{libreria.ubicacion}}" target="_blank"><i class="far fa-map"></i> Ubicación</a><br>
+                                                <b> Web : </b> <a href="{{ libreria.web }}" target="_blank"><i class="fas fa-link"></i> {{libreria.nombre}} </a>
                                             {% endif %}
                                         </td>
                                     </tr>
@@ -71,6 +109,7 @@
                             <br>
                         </div>
                     </div>
+                    <br>
                 </div>
                 <br>
             {% endfor %}
@@ -100,4 +139,17 @@
             </div>
         </div>
     {% endif %}
+    <br>
+{% endblock %}
+{% block javascript %}
+    <script src="{{ asset('assets/js/function.js') }}" type="text/javascript"></script>
+    <script>
+        $(document).ready(function () {
+            $("#controlBusqueda").toggle();
+
+            $("#act_busq").click(function () {
+                $("#controlBusqueda").toggle();
+            });
+        });
+    </script>
 {% endblock %}
