--- a/src/BcBundle/Resources/views/Libro/indexLibro.html.twig
+++ b/src/BcBundle/Resources/views/Libro/indexLibro.html.twig
@@ -1,45 +1,80 @@
 {% extends "BcBundle::layout.html.twig" %}
 {% block content %}
-    <br>
-    <div class="container bg-info">
-        <br>
-        <div class="row">
-            <div class="col-md-6">
-                <a href="{{path("bc_add_libro")}}"><input type="button" value="Proponer libro" class="btn btn-warning"></a>
-            </div>
-            <div class="col-md-6">
-                <a href=""><input type="button" value="Buscar" class="btn btn-warning">
-                </a>
-                    {% if app.user.rol == 'ADMIN' %}
-                    <a href="{{path("bc_index_NoVallibro")}}">
-                        <input type="button" value="Libros NO validados" class="btn btn-danger">
-                    </a>
-                {% endif %} 
-            </div>
-        </div>
-        <br>
-    </div>
-    <br>
     {% if app.user != null %} 
         {% if app.user.rol != null %}
+            <br>
+            <div class="container bg-dark">
+                <br>
+                <div class="row">
+                    <div class="col-md-6">
+                        <a href="{{path("bc_add_libro")}}"><input type="button" value="Proponer libro" class="btn btn-warning"></a>
+                    </div>
+                    <div class="col-md-6">
+                        <input id="act_busq" type="button" value="¿Buscas algo?" class="btn btn-warning">
+                        {% if app.user.rol == 'ADMIN' %}
+                            <a href="{{path("bc_index_NoVallibro")}}">
+                                <input type="button" value="Libros NO validados" class="btn btn-danger">
+                            </a>
+                        {% endif %} 
+                    </div>
+                </div>
+                <br>
+            </div>
+            <br>
+            <div id="busq_libro" class="container bg-info">
+                <br>
+                <div id="controlBusqueda" class="row">
+                    <div class="col-md-6">
+                        <h3><b>Búsqueda de libro</b></h3>
+                    </div>
+                    <div class="col-md-6">
+                        <table style="width: 75%">
+                            <form accept-charset="utf-8" method="POST">
+                                <tr>
+                                    <td><b>Seleccione el parámetro de búsqueda : </b><br>
+                                        <select name="ParamBusq">
+                                            <option value="nada"></option>
+                                            <option value="titulo">Libro</option>
+                                            <option value="autor">Autor</option>
+                                            <option value="categoria">Categoría</option>
+                                            <option value="libreria">Localización de su librería</option>
+                                            <option value="fecha">Fecha</option>
+                                        </select>
+                                    </td>
+                                </tr>             
+                                <tr>
+                                    <td ><b>Texto de clave : </b><br>
+                                        <input type="text" id="parametroBusqueda" value="" placeholder="" maxlength="30" autocomplete="off" />
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <br><input id="activarBusqueda" type="button" value="Buscar.." class="btn btn-dark"><input id="cancelarBusqueda" type="button" value="Cancelar" class="btn btn-danger">
+                                    </td>
+                                </tr>
+                            </form>
+                        </table>
+                    </div>
+                </div>
+                <br>
+            </div>
+            <br>
             {% for libro in libros %}
                 <!--LIBROS VALIDADOS -->
                 {% if libro.validacion == 1 %}
-                    <div id="tuplaLibro_{{libro.isbn}}" class="container bg-warning">
+                    <div class="container bg-warning">
                         <br>
-                        <titulolibro>
-                            <h2 id="titleLibro">
-                                <i class="fas fa-arrow-alt-circle-right"></i><b> {{libro.titulo}}</b>
-                            </h2>
-                        </titulolibro>
+                        <h2 id="titleLibro">
+                            <i class="fas fa-arrow-alt-circle-right"></i><b><a href="{{path("bc_perfil_libro",{"id":libro.idLibro})}}"> {{libro.titulo}}</a></b>
+                        </h2>
                         <br>
-                        <div id="bodyLibro" class="row">
+                        <div class="row">
                             <div class="col-md-4 text-center">
                                 <br>
                                 {% if libro.portada == null or libro.portada == "" %}
-                                    <img src="{{asset("imgdata/smile.png")}}" height="180" width="200"> 
+                                    <img src="{{asset("imgdata/smile.png")}}" height="230" width="200"> 
                                 {% else %}
-                                    <img src="{{asset("libro.portada")}}" height="180" width="200"> 
+                                    <img src="{{asset(libro.portada)}}" height="230" width="200"> 
                                 {% endif %}
                                 {% if app.user.rol == 'ADMIN' %} 
                                     <br><br>
@@ -63,7 +98,7 @@
                                             </a>
                                         </div>
                                     </div>
-                                    <br>
+                                    <br><br>
                                 {% endif %}
                             </div>
                             <div class="col-md-8">
@@ -95,6 +130,7 @@
                                 <div id="list_tiendas">
                                     <ul>
                                         <li><a href="{{path("bc_index_stocks",{"id":libro.idLibro})}}"><i class="fas fa-eye"></i><b> Ver librerías..</b></a></li>
+                                        <br><br>
                                     </ul>
                                 </div>
                             </div>
@@ -129,5 +165,17 @@
             </div>
         </div>
     {% endif %}
+    <br>
 {% endblock %}
+{% block javascript %}
+    <script src="{{ asset('assets/js/function.js') }}" type="text/javascript"></script>
+    <script>
+        $(document).ready(function () {
+            $("#controlBusqueda").toggle();
 
+            $("#act_busq").click(function () {
+                $("#controlBusqueda").toggle();
+            });
+        });
+    </script>
+{% endblock %}
