--- a/src/BcBundle/Resources/views/Libro/indexNoValLibro.html.twig
+++ b/src/BcBundle/Resources/views/Libro/indexNoValLibro.html.twig
@@ -1,26 +1,64 @@
 {% extends "BcBundle::layout.html.twig" %}
 {% block content %}
-    <br>
-    <div class="container bg-info">
-        <br>
-        <div class="row">
-            <div class="col-md-6">
-                <a href="{{path("bc_add_libro")}}"><input type="button" value="Proponer libro" class="btn btn-warning"></a>
-            </div>
-            <div class="col-md-6">
-                <a href=""><input type="button" value="Buscar" class="btn btn-warning"></a>
-                    {% if app.user.rol == 'ADMIN' %} 
-                    <a href="{{path("bc_index_libro")}}">
-                        <input id="BTVerValidados" type="button" value="Ver libros validados" class="btn btn-success">
-                    </a>
-                {% endif %} 
-            </div>
-        </div>
-        <br>
-    </div>
-    <br>
     {% if app.user != null %} 
         {% if app.user.rol != null %}
+            <br>
+            <div class="container bg-info">
+                <br>
+                <div class="row">
+                    <div class="col-md-6">
+                        <a href="{{path("bc_add_libro")}}"><input type="button" value="Proponer libro" class="btn btn-warning"></a>
+                    </div>
+                    <div class="col-md-6">
+                        <input id="act_busq" type="button" value="¿Buscas algo?" class="btn btn-warning">
+                        {% if app.user.rol == 'ADMIN' %}
+                            <a href="{{path("bc_index_libro")}}">
+                                <input id="BTVerValidados" type="button" value="Ver libros validados" class="btn btn-success">
+                            </a>
+                        {% endif %} 
+                    </div>
+                </div>
+                <br>
+            </div>
+            <br>
+            <div id="busq_libro" class="container bg-info">
+                <br>
+                <div id="controlBusqueda" class="row">
+                    <div class="col-md-6">
+                        <h3><b>Búsqueda de libro</b></h3>
+                    </div>
+                    <div class="col-md-6">
+                        <table style="width: 75%">
+                            <form accept-charset="utf-8" method="POST">
+                                <tr>
+                                    <td><b>Seleccione el parámetro de búsqueda : </b><br>
+                                        <select name="ParamBusq">
+                                            <option value="nada"></option>
+                                            <option value="titulo">Libro</option>
+                                            <option value="autor">Autor</option>
+                                            <option value="categoria">Categoría</option>
+                                            <option value="libreria">Localización de su librería</option>
+                                            <option value="fecha">Fecha</option>
+                                        </select>
+                                    </td>
+                                </tr>             
+                                <tr>
+                                    <td ><b>Texto de clave : </b><br>
+                                        <input type="text" id="parametroBusqueda" value="" placeholder="" maxlength="30" autocomplete="off" />
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <br><input id="activarBusqueda" type="button" value="Buscar.." class="btn btn-dark"><input id="cancelarBusqueda" type="button" value="Cancelar" class="btn btn-danger">
+                                    </td>
+                                </tr>
+                            </form>
+                        </table>
+                    </div>
+                </div>
+                <br>
+            </div>
+            <br>
             {% for libro in libros %}
                 <div id="tuplaLibro_{{libro.isbn}}" class="container bg-danger">
                     <br>
@@ -34,20 +72,32 @@
                         <div class="col-md-4 text-center">
                             <br>
                             {% if libro.portada == null or libro.portada == "" %}
-                                <img src="{{asset("imgdata/smile.png")}}" height="180" width="200"> 
+                                <img src="{{asset("imgdata/smile.png")}}" height="190" width="200"> 
                             {% else %}
-                                <img src="{{asset("libro.portada")}}" height="180" width="200"> 
+                                <img src="{{asset(libro.portada)}}" height="190" width="200"> 
                             {% endif %}
                             {% if app.user.rol == 'ADMIN' %} 
                                 <br><br>
-                                <div class="container">
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <a href="{{path("bc_validar",{"id":libro.id_libro})}}"><i class="fa fa-check" style="font-size: 250%"></i></a>     
-                                        </div>
+
+                                <div class="row">
+                                    <div class="col-md-2"></div>
+                                    <div class="col-md-3">
+                                        <a href="{{path("bc_delete_libro",{"id":libro.id_libro})}}">
+                                            <i class="fas fa-trash" style="font-size: 250%">   
+                                            </i>
+                                        </a>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <a href="{{path("bc_edit_libro",{"id":libro.id_libro})}}">
+                                            <i class="fas fa-pencil-alt" style="font-size: 250%">
+                                            </i>
+                                        </a>
+                                    </div>
+                                    <div class="col-md-3">
+                                        <a href="{{path("bc_validar",{"id":libro.id_libro})}}"><i class="fa fa-check" style="font-size: 250%"></i></a>     
                                     </div>
                                 </div>
-                                <br>
+                                <br><br>
                             {% endif %}
                         </div>
                         <div class="col-md-8">
@@ -70,7 +120,7 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <b>Categoría : "{{libro.categoria}}"</b>
+                                        <b>Categoría : "{{libro.nombre}}"</b>
                                     </td>
                                 </tr>
                             </table>
