--- a/src/BcBundle/Resources/views/Usuario/indexUsuario.html.twig
+++ b/src/BcBundle/Resources/views/Usuario/indexUsuario.html.twig
@@ -1,17 +1,11 @@
 {% extends "BcBundle::layout.html.twig" %}
 {% block content %}
-
     {% if app.user != null %} 
         {% if app.user.rol != null %}
             <br>
-            <div class="container bg-dark">
+            <div class="container bg-info">
                 <br>
                 <div class="row">
-                    {% if app.user.rol == 'ADMIN' %}
-                        <div class="col-md-6">
-                            <a href="{{path("bc_add_autor")}}"><input type="button" value="Inscribir autor" class="btn btn-warning"></a>
-                        </div>
-                    {% endif %}
                     <div class="col-md-6">
                         <input id="act_busq" type="button" value="¿Buscas algo?" class="btn btn-warning">
                     </div>
@@ -19,11 +13,11 @@
                 <br>
             </div>
             <br>
-            <div id="busq_libreria" class="container bg-info">
+            <div id="busq_libro" class="container bg-info">
                 <br>
                 <div id="controlBusqueda" class="row">
                     <div class="col-md-6">
-                        <h3><b>Búsqueda de autor</b></h3>
+                        <h3><b>Búsqueda de usuario</b></h3>
                     </div>
                     <div class="col-md-6">
                         <table style="width: 75%">
@@ -32,8 +26,11 @@
                                     <td><b>Seleccione el parámetro de búsqueda : </b><br>
                                         <select name="ParamBusq">
                                             <option value="nada"></option>
-                                            <option value="nombre">Nombre</option>
-                                            <option value="apellido">Apellido</option>
+                                            <option value="nif">NIF</option>
+                                            <option value="email">Email</option>
+                                            <option value="tlf">Tlf</option>
+                                            <option value="poblacion">Población</option>
+                                            <option value="provincia">Provincia</option>
                                         </select>
                                     </td>
                                 </tr>             
@@ -54,38 +51,59 @@
                 <br>
             </div>
             <br>
-            {% for autor in autores %}
+            {% for usuario in usuarios %}
                 <div class="container bg-warning">
                     <br>
+                    <h2>
+                        <i class="fas fa-arrow-alt-circle-right"></i><b>N# :<a href="{{path("bc_perfil_usuario",{"id":usuario.id_usuario})}}"> {{usuario.id_usuario}} || {{usuario.nick}} </a></b>
+                    </h2>
+                    <h4>
+                        {% if app.user.rol != "ADMIN" %}
+                            <i class="fas fa-user"></i>
+                        {% else %}
+                            <i class="fas fa-chess-king"></i>
+                        {% endif %}
+                        <b> {{usuario.rol}}</b>
+                    </h4>
+                    <br>
                     <div class="row">
-                        <div class="col-md-3 text-center">
-                            {% if autor.foto == null or autor.foto == "" %}
-                                <img src="{{asset("imgdata/smile.png")}}" height="120" width="150"> 
-                            {% else %}
-                                <img src="{{asset(autor.foto)}}" height="120" width="150"> 
-                            {% endif %}
+                        <div class="col-3">
                         </div>
-                        <div class="col-md-8">
-                            <br>
-                            <h2>
-                                <i class="fas fa-user"></i> {{autor.nombre}} {{autor.apellido}}
-                            </h2>
-                            {% if app.user.rol == 'ADMIN' %}
-                                <div class="container">
-                                    <div class="row">
+                        <div class="col-7">
+                            <table style="width:75%">
+                                <tr>
+                                    <td>
                                         <div class="col-md-3">
-                                            <a href="{{path("bc_edit_autor",{"id":autor.idAutor})}}"><i class="fas fa-pencil-alt" style="font-size: 250%"></i></a>
+                                            <a href="{{path("bc_del_usuario",{"id":usuario.id_usuario})}}">
+                                                <i class="fas fa-trash" style="font-size: 170%">   
+                                                </i>
+                                            </a>
                                         </div>
                                         <div class="col-md-3">
-                                            <a href="{{path("bc_delete_autor",{"id":autor.idAutor})}}"><i class="fas fa-trash" style="font-size: 250%"></i></a>
+                                            <a href="{{path("bc_edit_usuario",{"id":usuario.id_usuario})}}">
+                                                <i class="fas fa-pencil-alt" style="font-size: 170%">
+                                                </i>
+                                            </a>
                                         </div>
-                                    </div>
-                                </div>
-                            {% endif %}
+                                        <br>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <h4><b>Nombre completo : </b>{{usuario.nombre}} {{usuario.apellido}}</h4>
+                                        <h4><b>E-mail : </b>{{usuario.email}}</h4>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <h4><b>Tlf : </b>{{usuario.tlf}}</h4>
+                                        <h4><b>Dirección : </b>{{usuario.direccion}}; {{usuario.poblacion}}/{{usuario.provincia}}</h4>
+                                    </td>
+                                </tr>
+                            </table>
                             <br>
                         </div>
                     </div>
-                    <br>
                 </div>
                 <br>
             {% endfor %}
@@ -96,7 +114,7 @@
                     </div>
                     <div class="col-md-5" align="center">
                         <br><br>
-                        <h1>¡Alto ahí, no tienes los permisos necesarios para acceder a esta sección!</h1>
+                        <h1>¡Alto ahí, forastero! ¡Debes inscribirte primero para entrar a esta sección!</h1>
                         <br><br>
                     </div>
                 </div>
@@ -115,6 +133,7 @@
             </div>
         </div>
     {% endif %}
+    <br>
 {% endblock %}
 {% block javascript %}
     <script src="{{ asset('assets/js/function.js') }}" type="text/javascript"></script>
