--- a/src/BcBundle/Resources/views/Usuario/login.html.twig
+++ b/src/BcBundle/Resources/views/Usuario/login.html.twig
@@ -62,14 +62,13 @@
             <div class="row"> 
                 <div class="col-md-12 text-center">
                     <br>
-                    <h2 id="menu_princ"> Menú </h2>
+                    <h2 id="menu_princ"><b> Menú </b></h2>
                     <br>
                 </div>
             </div>
             <span id="menuContentprinc">
                 <div class="row">
                     <div class="col-md-3" align="center">
-                        <input type="button" value="Prueba JS" class="btn btn-danger" onclick="testEditar()">
                         <a href="{{path("bc_index_libro")}}">
                             <img src="{{asset("imgdata/smile.png")}}" height="50" width="50">
                             <input type="button" value="Listado de libros" class="btn btn-info">
@@ -89,7 +88,7 @@
                     </div>
                     {% if app.user.rol == 'ADMIN' %}
                         <div class="col-md-3" align="center">  
-                            <a href="">
+                            <a href="{{path("bc_index_usuario")}}">
                                 <img src="{{asset("imgdata/smile.png")}}" height="50" width="50">
                                 <input type="button" value="Listado de Usuarios" class="btn btn-danger">
                             </a><br><br>
